# xlwings-mcp

./: .mcp.json  CLAUDE.md  README.md  demo_read_write.py  demo_sheet_names.py  demo_table.xlsx  lint.sh  main.py  mcp.md  plan.md  pyproject.toml  restructuring-plan.md  savings_simulation.xlsx  test_data.xlsx  ~$test_data.xlsx
.claude/commands/: lint-commit-push.md
src/xlwings_mcp/: __init__.py  server.py
tests/: conftest.py  test_excel_operations.py
tests/fixtures/: data_table.xlsx  empty.xlsx  multi_sheet.xlsx  sample_data.xlsx  simple.xlsx  with_numbers.xlsx
tests/integration/: test_runner.py  test_scenarios.py
