[project]
name = "excel-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "openpyxl>=3.1.5",
    "pytest>=8.3.5",
    "tabulate>=0.9.0",
    "xlwings>=0.33.15",
]

[dependency-groups]
dev = [
    "types-tabulate>=0.9.0.20241207",
]
