[project]
name = "excel-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "tabulate>=0.9.0",
    "xlwings>=0.33.15",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "types-tabulate>=0.9.0.20241207",
]

[[tool.mypy.overrides]]
module = "mcp.server.fastmcp"
ignore_missing_imports = true
